# jrmoulton-web

./: .gitignore  Cargo.toml  article_preview.html  build.rs  common.css  common.css.map  common.scss  lx_serv_run.sh  out.html  package-lock.json  painter.rs  test.html
content/: about.md  designing_a_custom_site_generator.md  starting_open_source.md  what_is_a_cpu.md
crates/generator/: Cargo.toml  onedark_light.toml  test.txt
crates/generator/src/: article_template.html  lib.rs  main.rs
crates/tree-painter/: Cargo.toml
crates/tree-painter/custom_highlights/: rust.scm
crates/tree-painter/src/: lib.rs  renderer.rs  theme.rs
crates/web/: Cargo.toml
crates/web/src/: main.rs
js/: theme.js
src/: main.rs
styles/: common.css  common.scss  fonts.css
templates/: article.html  article_preview.html  blurb.html  footer.html  head.html  header.html  index.html  theme_div.html
themes/: ayu_light.toml  catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  gruvbox_dark_soft.toml  onedark.toml  onedark_dark.toml  onedark_darker.toml  onedark_light.toml
