[package]
name = "jrmoulton-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
tree-painter = { path="../tree-painter/master/lib", default-features = false, features = ["tree-sitter-rust", "tree-sitter-c", "tree-sitter-cpp"] }
# tree-painter = {version="0", default-features = false, features = ["tree-sitter-rust", "tree-sitter-c", "tree-sitter-cpp"] }
