[package]
name = "generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
tree-painter = { path="../../../tree-painter/upsteam/lib", default-features = false, features = ["tree-sitter-rust", "tree-sitter-c", "tree-sitter-cpp", "tree-sitter-java"] }
titlecase = "2.2.1"
# tree-painter = {version="0", default-features = false, features = ["tree-sitter-rust", "tree-sitter-c", "tree-sitter-cpp"] }
